# aquabot_master_thesis

./: .gitignore  README.md
src/aquabot_bringup/: package.xml  setup.py
src/aquabot_bringup/config/: aquabot_params.yaml  controllers.yaml
src/aquabot_bringup/launch/: mock_ros2_control.launch.py  system_launch.py
src/aquabot_bringup/urdf/: mock_dynamixel.urdf.xacro
src/arduino_reader/: package.xml  setup.cfg  setup.py
src/arduino_reader/arduino_reader/: arduino_reader_node.py
src/dynamixel_controller/: package.xml  setup.py
src/dynamixel_controller/dynamixel_controller/: dynamixel_controller_node.py
src/master/: package.xml  setup.py
src/master/master/: fake_sensor_node.py  master_node.py
