<?xml version="1.0"?>
<package format="3">
  <name>arduino_reader</name>
  <version>0.0.0</version>
  <description>Reads sensor data from Arduino over serial and publishes ROS2 messages.</description>

  <maintainer email="eldiez@todo.todo">eldiez</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
