<?xml version="1.0"?>
<package format="3">
  <name>master</name>
  <version>0.0.0</version>
  <description>Bringup package: launch and configuration files for Aquabot system.</description>

  <maintainer email="eldiez@todo.todo">eldiez</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
